# feeder_huatai_insightudp_v_1.0

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md
conf/: feeder.yaml
doc/: ChangeLog.md
lib/udp_v1.10.0/include/mdc_gateway_client/include/: base_define.h  htsc_client_interface.h  log_interface.h  message_handle.h  parameter_define.h  udp_client_interface.h
lib/udp_v1.10.0/include/mdc_gateway_client/protobuf/: ADChipDistribution.pb.cc  ADDerivedAnalysis.pb.cc  ADDerivedAnalysis.pb.h  ADFundFlowAnalysis.pb.cc  ADFundFlowAnalysis.pb.h  ADIndicatorsRanking.pb.cc  ADKLine.pb.h  ADNews.pb.cc  ADNews.pb.h  ADOrderbookSnapshot.pb.cc  ADOrderbookSnapshot.pb.h  ADOrderbookSnapshotWithTick.pb.cc  ADStaringResult.pb.cc  ADTwap.pb.cc  ADTwap.pb.h  ADUpsDownsAnalysis.pb.cc  ADUpsDownsAnalysis.pb.h  ADVolumeByPrice.pb.cc  ADVolumeByPrice.pb.h  DynamicPacket.pb.cc  EMDTickLevel.pb.cc  EMarketDataType.pb.cc  EMarketDataType.pb.h  ESecurityIDSource.pb.cc  ESecurityIDSource.pb.h  ESecurityType.pb.cc  ESecurityType.pb.h  HtscMarketData.pb.cc  HtscMarketData.pb.h  InsightErrorContext.pb.cc  Login.pb.cc  Login.pb.h  MDBasicInfo.pb.h  MDBond.pb.cc  MDCnexQuote.pb.cc  MDETFBasicInfo.pb.h  MDForex.pb.cc  MDForex.pb.h  MDFund.pb.cc  MDFund.pb.h  (+34 more)
lib/udp_v2.1.0/include/mdc_gateway_client/include/: error_define.h  mdc_client_factory.h  mdc_htsc_client_factory.h  parameter_define.h
lib/udp_v2.1.0/include/mdc_gateway_client/protobuf/: ADChipDistribution.pb.h  ADDerivedAnalysis.pb.cc  ADDerivedAnalysis.pb.h  ADIndicatorsRanking.pb.h  ADKLine.pb.cc  ADNews.pb.cc  ADNews.pb.h  ADOrderbookSnapshot.pb.cc  ADOrderbookSnapshot.pb.h  ADOrderbookSnapshotWithTick.pb.h  ADStaringResult.pb.h  ADUpsDownsAnalysis.pb.cc  ADUpsDownsAnalysis.pb.h  ADVwap.pb.cc  ADVwap.pb.h  DynamicPacket.pb.h  EMDPeriodType.pb.cc  EMDPeriodType.pb.h  EMDTickLevel.pb.h  EMarketDataType.pb.cc  EMarketDataType.pb.h  EMessageType.pb.cc  EMessageType.pb.h  ESecurityIDSource.pb.cc  ESecurityIDSource.pb.h  ESecurityType.pb.cc  ESecurityType.pb.h  InsightErrorContext.pb.h  Login.pb.cc  Login.pb.h  MDBasicInfo.pb.cc  MDBond.pb.h  MDCfetsBenchmark.pb.cc  MDCfetsBenchmark.pb.h  MDCfetsBondDeal.pb.cc  MDCfetsBondDeal.pb.h  MDCfetsBondSnapshot.pb.cc  MDCfetsBondSnapshot.pb.h  MDCfetsCurrencyDeal.pb.cc  MDCfetsCurrencyDeal.pb.h  (+76 more)
lib/udp_v3.2.4/include/mdc_gateway_client/include/: client_interface.h  error_define.h  message_handle.h
lib/udp_v3.2.4/include/mdc_gateway_client/protobuf/: ADChipDistribution.pb.cc  ADChipDistribution.pb.h  ADDerivedAnalysis.pb.cc  ADDerivedAnalysis.pb.h  ADFundFlowAnalysis.pb.cc  ADFundFlowAnalysis.pb.h  ADIndicatorsRanking.pb.cc  ADIndicatorsRanking.pb.h  ADKLine.pb.cc  ADKLine.pb.h  ADNews.pb.cc  ADNews.pb.h  ADOrderbookSnapshot.pb.cc  ADOrderbookSnapshot.pb.h  ADOrderbookSnapshotWithTick.pb.cc  ADOrderbookSnapshotWithTick.pb.h  ADStaringResult.pb.cc  ADStaringResult.pb.h  ADTwap.pb.cc  ADTwap.pb.h  ADUpsDownsAnalysis.pb.cc  ADUpsDownsAnalysis.pb.h  ADVolumeByPrice.pb.cc  ADVolumeByPrice.pb.h  ADVwap.pb.cc  ADVwap.pb.h  DynamicPacket.pb.cc  DynamicPacket.pb.h  EMDPeriodType.pb.cc  EMDPeriodType.pb.h  EMDTickLevel.pb.cc  EMDTickLevel.pb.h  EMarketDataType.pb.cc  EMarketDataType.pb.h  EMessageType.pb.cc  EMessageType.pb.h  ESecurityIDSource.pb.cc  ESecurityIDSource.pb.h  ESecurityType.pb.cc  ESecurityType.pb.h  (+76 more)
src/insight_feeder/: config.cc  config.h  cpu_manager.h  define.h  insight_handler.cc  insight_handler.h  insight_server.cc  insight_server.h  insight_support.cc  insight_support.h  main.cc
